# agentIDE

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.txt  design.md  package.json  pnpm-lock.yaml  pricing.json
.cargo/: config.toml
.claude/penpot-vision-wrapper/: config.json  probe.py  server.py  test_wrapper.py
.claude/skills/run-agentide/: driver.sh
.claude/skills/vision-parse/: SKILL.md  vlm.py
.github/workflows/: ci.yml
apps/frontend/: index.html  package.json  splash.html  tailwind.config.js  tsconfig.node.json  vite.config.ts
apps/frontend/public/: splash.html
apps/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
apps/frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json
apps/frontend/src-tauri/examples/: quick_test.rs  quick_test2.rs  quick_test3.rs
apps/frontend/src-tauri/icons/: icon.icns
apps/frontend/src-tauri/permissions/: app-commands.toml  default.toml
apps/frontend/src-tauri/src/: lib.rs  main.rs  manifest.rs  updater.rs
apps/frontend/src-tauri/src/bootstrap/: detector.rs  installer.rs  mod.rs  uploader.rs
apps/frontend/src-tauri/src/commands/: approval.rs  config.rs  connection.rs  files.rs  llm.rs  log_bridge.rs  mod.rs  restart.rs  session.rs  settings.rs  tap.rs  tool.rs  window.rs  winhttp.rs
apps/frontend/src-tauri/src/connection/: config.rs  manager.rs  mod.rs  perf.rs  ssh.rs
apps/frontend/src-tauri/src/store/: mod.rs
apps/frontend/src-tauri/src/transport/: ipc.rs  mod.rs  ssh_channel.rs
apps/frontend/src-tauri/tests/: ipc_transport_test.rs  live_diag_test.rs  live_probe_test.rs  live_relay_test.rs  live_ssh_test.rs  live_terminal_test.rs
apps/frontend/src/api/: connectionApi.ts  fileApi.ts  llmApi.ts  restartApi.ts  settingsApi.ts  tapApi.ts  terminalApi.ts  types.ts
apps/frontend/src/components/: ErrorBoundary.tsx
apps/frontend/src/components/activity/: ActivityBar.tsx
apps/frontend/src/components/agent/: AgentManagerPanel.tsx
apps/frontend/src/components/agentpanel/: ActionCard.tsx  AgentColumnPanel.tsx  AgentInput.tsx  AgentPanel.tsx  AgentTurn.tsx  CodeSnippet.tsx  LifecycleBanner.tsx  ResultBlock.tsx  StatusDot.tsx  TextBlock.tsx  ThinkingBlock.tsx
apps/frontend/src/components/approval/: ApprovalCard.tsx  ApprovalQueue.tsx
apps/frontend/src/components/bottom/: AgentStdout.tsx  BottomPanels.tsx  BottomTerminal.tsx  HttpTrafficPanel.tsx
apps/frontend/src/components/changes/: CodeChangeEditor.tsx  CodeChangesSidebar.tsx
apps/frontend/src/components/connection/: ConnectionDialog.tsx  ConnectionList.tsx  ConnectionStatus.tsx
apps/frontend/src/components/context/: ActiveFilesMenu.tsx
apps/frontend/src/components/detail/: CostTracker.tsx  SessionDetail.tsx  TurnList.tsx
apps/frontend/src/components/editor/: CodeEditor.tsx  EditorBreadcrumb.tsx
apps/frontend/src/components/explorer/: ConnectionFileTree.tsx  ExplorerPanel.tsx  FileBrowser.tsx
apps/frontend/src/components/layout/: AppLogo.tsx  AppShell.tsx  BottomPanel.tsx  EditorTabBar.tsx  PanelTabBar.tsx  SecondarySidebar.tsx  SplashScreen.tsx  UpdateBanner.tsx
apps/frontend/src/components/menubar/: GlobalSearch.tsx  MenuBar.tsx  MenuDropdown.tsx
apps/frontend/src/components/models/: ModelListPanel.tsx
apps/frontend/src/components/overview/: AggregateStats.tsx  CostChart.tsx  Dashboard.tsx  HeatmapChart.tsx
apps/frontend/src/components/search/: SearchPanel.tsx
apps/frontend/src/components/session/: SessionItem.tsx  SessionManagerPanel.tsx  SessionRail.tsx  SessionToolbar.tsx
apps/frontend/src/components/settings/: AgentBackendModal.tsx  AgentEngineModal.tsx  LlmProviderModal.tsx
apps/frontend/src/components/status/: AgentStatus.tsx  BootstrapProgress.tsx  ConnectionBadge.tsx  StatusPanel.tsx
apps/frontend/src/components/terminal/: AgentTerminalColumn.tsx  BottomTerminal.tsx  TerminalInstance.tsx  TerminalPane.tsx
apps/frontend/src/hooks/: useAgentConversation.ts  useApprovalQueue.ts  useFileBuffer.ts  useMenuCommands.ts  useSessionStore.ts  useTerminal.ts  useTerminalApi.ts  useWorkspaceView.ts
apps/frontend/src/lib/: debugLog.ts  diff.ts  httpEventBridge.ts  httpEventParser.ts  httpTrafficStats.ts  languageDetector.ts  monacoSetup.ts  pricingDefaults.ts  pricingEngine.ts  protocol.ts  spawnEnv.ts  storage.ts  usageParser.ts  utils.ts
apps/frontend/src/stores/: agentEngineStore.ts  agentLogStore.ts  agentSettingsStore.ts  agentStore.ts  approvalStore.ts  bootstrapStore.ts  codeChangeStore.ts  connectionStore.ts  contextFileStore.ts  fileBufferStore.ts  fileTreeCacheStore.ts  httpTrafficStore.ts  layoutStore.ts  llmProviderStore.ts  perfStore.ts  sessionStore.ts
apps/frontend/src/styles/: index.css
crates/ota-loader/: Cargo.toml
crates/ota-loader/src/: main.rs  winhttp.rs
crates/remote-agent-host/: Cargo.toml
crates/remote-agent-host/src/: agent_parse.rs  lib.rs  main.rs  server.rs
crates/remote-agent-host/src/installer/: mod.rs  probe.rs  tool_installer.rs
crates/remote-agent-host/src/pty/: worker.rs
crates/remote-agent-host/src/session/: manager.rs  mod.rs  registry.rs  types.rs
crates/remote-agent-host/src/tap/: ca.rs  mod.rs  proxy.rs  record.rs
crates/remote-agent-host/src/tap/translate/: mod.rs  request.rs  response.rs  stream.rs
crates/remote-agent-host/src/transport/: stdio.rs
crates/remote-agent-host/tests/: e2e_test.rs  ipc_integration_test.rs
crates/shared-protocol/: Cargo.toml
crates/shared-protocol/src/: codec.rs  lib.rs  messages.rs  types.rs
crates/shared-protocol/tests/: bootstrap_test.rs  protocol_test.rs
packaging/windows/msi/: remote-ai-ide.wxs
packaging/windows/msi/Icon/: Icon.AppIconId
scripts/: build-monaco.sh  build-remote.sh  build-windows-msi.sh  build-windows.ps1  dev-loop.sh  dev.sh  release.sh
