[workspace]
resolver = "2"
members = [
    "crates/shared-protocol",
    "crates/remote-agent-host",
    "apps/frontend/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
byteorder = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
chrono = "0.4"
