[package]
name = "remote-agent-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[[bin]]
name = "ssh-test"
path = "src/bin/ssh-test.rs"
required-features = ["ssh-test"]

[features]
default = []
ssh-test = ["russh", "ssh-key", "base64", "async-trait"]

[dependencies]
shared-protocol = { path = "../shared-protocol" }
tokio.workspace = true
serde.workspace = true
serde_json = "1"
rmp-serde.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true
uuid.workspace = true
dashmap.workspace = true
chrono.workspace = true
bytes = "1"
portable-pty = "0.9"

# HTTP traffic tap: MITM/reverse proxy for agent CLI outbound requests.
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
serde_bytes = "0.11"


# Only needed by ssh-test binary
russh = { version = "0.61", features = ["async-trait"], optional = true }
ssh-key = { version = "0.6", features = ["ed25519"], optional = true }
base64 = { version = "0.22", optional = true }
async-trait = { version = "0.1", optional = true }
