[package]
name = "remote-ai-ide"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "remote_ai_ide_lib"
crate-type = ["lib", "staticlib"]

[features]
default = ["ssh"]
ssh = ["russh", "ssh-key", "base64", "shell-words"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared-protocol = { path = "../../../crates/shared-protocol" }
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json = "1"
serde_bytes = "0.11"
rmp-serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true
uuid.workspace = true
dashmap.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.48", features = ["Win32_Networking_WinHttp", "Win32_Foundation"] }
async-trait = "0.1"
dirs = "6"
bytes = "1"
which = "7"

# SSH support (optional during development)
russh = { version = "0.61", optional = true }
ssh-key = { version = "0.6", features = ["ed25519"], optional = true }
base64 = { version = "0.22", optional = true }
sha2 = "0.10"
shell-words = { version = "1", optional = true }
